swen430as2/test_files/invalid/null/Null_Invalid_1-TC01.while
int f(null x) {
    return x;
}